[package]
name = "rusty_scrfd"
version = "1.2.0"
authors = ["Prabhat Ranjan <prabhat0206@hotmail.com>"]
edition = "2021"
description = "A high-performance face detection library using SCRFD model with OpenCV integration"
keywords = ["face-detection", "computer-vision", "machine-learning", "onnx", "opencv"]
categories = ["computer-vision", "multimedia::images", "science::ml"]
license = "MIT"
repository = "https://github.com/prabhat0206/scrfd"
documentation = "https://docs.rs/rusty_scrfd"
readme = "readme.md"
exclude = [
    "models/*",
    "sample_input/*",
    "sample_output/*",
    ".github/*",
]

[features]
default = []
async = ["tokio"]

[dependencies]
ort = { version = "2.0.0-rc.9", features = [ "ndarray" ] }
opencv = "0.93.4"
ndarray = "0.16.1"
uuid = "1.11.0"
anyhow = "1.0.93"
ndarray-stats = "0.4"
tokio = { version = "1.0", optional = true }
log = "0.4"
